--- a/home/index.html
+++ b/home/index.html
@@ -17,16 +17,37 @@
         <section class="main-categories">
             <h1>Conheça Nosso Catalogo</h1>
             <p>TODA JOIA CONTA UMA HISTÓRIA, ESCOLHA A SUA</p>
+
             <section class="all-categories">
-                <ul type="none" class="list-categories">
-                    <li><a href="#"><img src="" alt="">Aneis</img></a></li>
-                    <li><a href="#"><img src="" alt="">Colares</img></a></li>
-                    <li><a href="#"><img src="" alt="">Brincos</img></a></li>
-                    <li><a href="#"><img src="" alt="">Pulseiras</img></a></li>
-                    <li></li>
-                </ul>
+        
+                <div class="list-categories">
+                    <div id="aneis" class="item-categorie">
+                        <img src="" alt="">
+                        <div class="txt-categories">Aneis</div>
+                    </div>
+
+                    <div id="colares" class="item-categorie">
+                        <img src="luna joias--home_files/home-colares-categoria.jpg" alt="">
+                        <div class="txt-categories"  >Colares</div>
+                    </div>
+
+                    <div id="Brincos" class="item-categorie">
+                        <img src="luna joias--home_files/home-brincos-categoria.jpg" alt="">
+                       <div class="txt-categories">Brincos</div>
+                    </div>
+
+                    <div id="Pulseiras" class="item-categorie">
+                        <img src="luna joias--home_files/home-pulseiras-categorias.jpg" alt="">
+                        <div class="txt-categories">Pulseiras</div>
+                    </div>
+                </div>
             </section>
         </section>
     </main>
+    <footer>
+        <section class="main-footer">
+            
+        </section>
+    </footer>
 </body>
 </html>
