--- a/home/index.html
+++ b/home/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <section class="main-categories">
-            <h1>Conheça Nosso Catalogo</h1>
+            <h1>Conheça Nosso Catálogo</h1>
             <p>TODA JOIA CONTA UMA HISTÓRIA, ESCOLHA A SUA</p>
 
             <section class="all-categories">
