--- a/home/index.html
+++ b/home/index.html
@@ -10,9 +10,18 @@
 </head>
 <body>
     <header>
-        <div id="logo-home">
+        <div class="main-header">
+            <span>Você moderna todos os dias!</span>
+
             <img src="favicon/android-chrome-192x192.png" alt="logo-luna-joias" class="logo">
+
            <nav><a href="">Contate-nos</a></nav>
+
+           <div class="hamburguer">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
         </div>
         <div id="line-header"></div>
        
@@ -51,7 +60,17 @@
     </main>
     <footer>
         <section class="main-footer">
-            <img src="favicon/android-chrome-192x192.png" alt="logo-luna-joias" id='logo-ansize'class="logo">
+            <div>
+                <img src="favicon/android-chrome-192x192.png" alt="logo-luna-joias" id='logo-ansize'class="logo">
+            </div>
+            <ul type="none" class="social-midia-icons">
+                <li><a href="https://www.instagram.com/lunajoiaas_/" target="_blank">
+                    <img src="icons/logotipo-do-instagram.png" alt=""></a>
+                </li>
+                <li><a href="https://api.whatsapp.com/send?phone=557399101927" target="_blank">
+                    <img src="icons/whatsapp.png" alt=""></a>
+                </li>
+            </ul>
         </section>
     </footer>
 </body>
