--- a/home/index.html
+++ b/home/index.html
@@ -11,16 +11,30 @@
 <body>
     <header>
         <div class="main-header">
-            <span>Você moderna todos os dias!</span>
+            <span id="txt-modern">Você moderna todos os dias!</span>
 
             <img src="favicon/android-chrome-192x192.png" alt="logo-luna-joias" class="logo">
 
-           <nav><a href="">Contate-nos</a></nav>
+           <nav class="contact-us"><a href="">Contate-nos</a></nav>
 
            <div class="hamburguer">
             <span class="bar"></span>
             <span class="bar"></span>
             <span class="bar"></span>
+          </div>
+
+          <div class="contact-us-box">
+                <ul type="none">
+                    <li class="itens-menu">
+                        <img src="icons/logotipo-do-instagram.png" alt="" class="icons-menu">
+                        <a href="https://www.instagram.com/lunajoiaas_/">Instagram</a>
+                    </li>
+
+                    <li class="itens-menu" >
+                        <img src="icons/whatsapp.png" alt="" class="icons-menu">
+                        <a href="https://api.whatsapp.com/send?phone=557399101927">Whatsapp</a>
+                    </li>
+                </ul>
           </div>
         </div>
         <div id="line-header"></div>
@@ -29,7 +43,7 @@
     <main>
         <section class="main-categories">
             <h1>Conheça Nosso Catálogo</h1>
-            <p>TODA JOIA CONTA UMA HISTÓRIA, ESCOLHA A SUA</p>
+            <p>TODA JOIA CONTA UMA HISTÓRIA, ESCOLHA A SUA!</p>
 
             <section class="all-categories">
         
@@ -73,5 +87,6 @@
             </ul>
         </section>
     </footer>
+    <script src="home.js"></script>
 </body>
 </html>
