--- a/home/index.html
+++ b/home/index.html
@@ -50,23 +50,31 @@
                 <div class="list-categories">
 
                     <div id="aneis" class="item-categorie">
-                        <img src="" alt="">
-                        <div class="txt-categories">Aneis</div>
+                        <a href="">
+                            <img src="" alt="">
+                            <div class="txt-categories">Aneis</div>
+                        </a>
                     </div>
 
                     <div id="colares" class="item-categorie">
-                        <img src="luna joias--home_files/home-colares-categoria.jpg" alt="">
-                        <div class="txt-categories"  >Colares</div>
+                        <a href="coloares-pagina.html" target="_blank">
+                            <img src="luna joias--home_files/home-colares-categoria.jpg" alt="">
+                            <div class="txt-categories"> Colares</div>
+                         </a>
                     </div>
 
                     <div id="Brincos" class="item-categorie">
-                        <img src="luna joias--home_files/home-brincos-categoria.jpg" alt="">
-                       <div class="txt-categories">Brincos</div>
+                        <a href="">
+                            <img src="luna joias--home_files/home-brincos-categoria.jpg" alt="">
+                           <div class="txt-categories">Brincos</div>
+                        </a>
                     </div>
 
                     <div id="Pulseiras" class="item-categorie">
-                        <img src="luna joias--home_files/home-pulseiras-categorias.jpg" alt="">
-                        <div class="txt-categories">Pulseiras</div>
+                        <a href="">
+                            <img src="luna joias--home_files/home-pulseiras-categorias.jpg" alt="">
+                            <div class="txt-categories">Pulseiras</div>
+                        </a>
                     </div>
                 </div>
             </section>
