--- a/colares/coloares-pagina.html
+++ b/colares/coloares-pagina.html
@@ -7,6 +7,36 @@
     <title>Luna Joias - Colares</title>
 </head>
 <body>
-   
+    <header>
+        <div class="main-header">
+            <span id="txt-modern">Você moderna todos os dias!</span>
+
+            <img src="../favicon/android-chrome-192x192.png" alt="logo-luna-joias" class="logo">
+
+           <nav class="contact-us"><a href="">Contate-nos</a></nav>
+
+           <div class="hamburguer">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+
+          <div class="contact-us-box">
+                <ul type="none">
+                    <li class="itens-menu">
+                        <img src="icons/logotipo-do-instagram.png" alt="" class="icons-menu">
+                        <a href="https://www.instagram.com/lunajoiaas_/">Instagram</a>
+                    </li>
+
+                    <li class="itens-menu" >
+                        <img src="icons/whatsapp.png" alt="" class="icons-menu">
+                        <a href="https://api.whatsapp.com/send?phone=557399101927">Whatsapp</a>
+                    </li>
+                </ul>
+          </div>
+        </div>
+        <div id="line-header"></div>
+       
+    </header>
 </body>
 </html>
