--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luna Joias - Catalogo</title>
-    <link rel="shortcut icon" href="favicon/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../favicon/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="main-header">
             <span id="txt-modern">Você moderna todos os dias!</span>
 
-            <img src="favicon/android-chrome-192x192.png" alt="logo-luna-joias" class="logo">
+            <img src="../favicon/android-chrome-192x192.png" alt="logo-luna-joias" class="logo">
 
            <nav class="contact-us"><a href="">Contate-nos</a></nav>
 
@@ -50,28 +50,28 @@
                 <div class="list-categories">
 
                     <div id="aneis" class="item-categorie">
-                        <a href="">
+                        <a href="../aneis/aneis-pagina.html" target="_parent">
                             <img src="" alt="">
                             <div class="txt-categories">Aneis</div>
                         </a>
                     </div>
 
                     <div id="colares" class="item-categorie">
-                        <a href="coloares-pagina.html" target="_blank">
+                        <a href="../colares/coloares-pagina.html" target="_parent">
                             <img src="luna joias--home_files/home-colares-categoria.jpg" alt="">
                             <div class="txt-categories"> Colares</div>
                          </a>
                     </div>
 
                     <div id="Brincos" class="item-categorie">
-                        <a href="">
+                        <a href="../brincos/brincos-pagina.html" target="_parent">
                             <img src="luna joias--home_files/home-brincos-categoria.jpg" alt="">
                            <div class="txt-categories">Brincos</div>
                         </a>
                     </div>
 
                     <div id="Pulseiras" class="item-categorie">
-                        <a href="">
+                        <a href="../pulseiras/pulseira-pagina.html" target="_parent">
                             <img src="luna joias--home_files/home-pulseiras-categorias.jpg" alt="">
                             <div class="txt-categories">Pulseiras</div>
                         </a>
@@ -83,14 +83,14 @@
     <footer>
         <section class="main-footer">
             <div>
-                <img src="favicon/android-chrome-192x192.png" alt="logo-luna-joias" id='logo-ansize'class="logo">
+                <img src="../favicon/android-chrome-192x192.png" alt="logo-luna-joias" id='logo-ansize'class="logo">
             </div>
             <ul type="none" class="social-midia-icons">
                 <li><a href="https://www.instagram.com/lunajoiaas_/" target="_blank">
-                    <img src="icons/logotipo-do-instagram.png" alt=""></a>
+                    <img src="../icons/logotipo-do-instagram.png" alt=""></a>
                 </li>
                 <li><a href="https://api.whatsapp.com/send?phone=557399101927" target="_blank">
-                    <img src="icons/whatsapp.png" alt=""></a>
+                    <img src="../icons/whatsapp.png" alt=""></a>
                 </li>
             </ul>
         </section>
