--- a/colares/coloares-pagina.html
+++ b/colares/coloares-pagina.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luna Joias - Colares</title>
+    <link rel="shortcut icon" href="../favicon/favicon-16x16.png" type="image/x-icon">
+    <link rel="stylesheet" href="colares-pagina.css">
 </head>
 <body>
     <header>
@@ -24,12 +26,12 @@
           <div class="contact-us-box">
                 <ul type="none">
                     <li class="itens-menu">
-                        <img src="icons/logotipo-do-instagram.png" alt="" class="icons-menu">
+                        <img src="../icons/logotipo-do-instagram.png" alt="" class="icons-menu">
                         <a href="https://www.instagram.com/lunajoiaas_/">Instagram</a>
                     </li>
 
                     <li class="itens-menu" >
-                        <img src="icons/whatsapp.png" alt="" class="icons-menu">
+                        <img src="../icons/whatsapp.png" alt="" class="icons-menu">
                         <a href="https://api.whatsapp.com/send?phone=557399101927">Whatsapp</a>
                     </li>
                 </ul>
@@ -38,5 +40,66 @@
         <div id="line-header"></div>
        
     </header>
+
+   <main>
+        <section class="main-main">
+            <h1>Nosso Colares</h1>
+            <p>JOIAS PERFEITAS PARA CADA OCASIÃO</p>
+            <div class="list-peças">
+                <div class="peças">
+                    <img src="imagens/Chocker Léa 129,90.jpg" alt="" class="img-peças" id="lea" onclick="out()" ondblclick="over()">
+                    <p class="txt-price">Chocker  Léa  <br> R$129,90</p>
+                </div>
+                <div class="peças">
+                    <img src="imagens/Chocker Nanda 117,00.jpg" alt="" class="img-peças" id="nanda" onclick="outNanda()" ondblclick="overNanda()" >
+                    <p class="txt-price">Chocker Nanda <br> R$117,00</p>
+                </div >
+                <div class="peças">
+                    <img src="imagens/choker lila 139.jpg" alt="" class="img-peças" id="lila" onclick="outLila()" ondblclick="overLila()">
+                    <p class="txt-price">choker lila   <br>R$139,00</p>
+                </div>
+                <div class="peças">
+                    <img src="imagens/conjunto elisa 132.jpg" alt="" class="img-peças" id="elisa" onclick="outElisa()" ondblclick="overElisa()">
+                    <p class="txt-price">Conjunto elisa  <br> R$132,00</p>
+                </div >
+                <div class="peças">
+                    <img src="" alt="">
+                    
+                </div>
+                <div class="peças">
+                    <img src="" alt="">
+                </div>
+
+            </div>
+        </section>
+   </main>
+
+
+
+
+
+
+
+
+
+
+
+    <footer>
+        <section class="main-footer">
+            <div>
+                <img src="../favicon/android-chrome-192x192.png" alt="logo-luna-joias" id='logo-ansize'class="logo">
+            </div>
+            <ul type="none" class="social-midia-icons">
+                <li><a href="https://www.instagram.com/lunajoiaas_/" target="_blank">
+                    <img src="../icons/logotipo-do-instagram.png" alt=""></a>
+                </li>
+                <li><a href="https://api.whatsapp.com/send?phone=557399101927" target="_blank">
+                    <img src="../icons/whatsapp.png" alt=""></a>
+                </li>
+            </ul>
+        </section>
+    </footer>
+    <script src="colares-menu.js"></script>
+    <script src="peças-animacao.js"></script>
 </body>
 </html>
