--- a/colares/coloares-pagina.html
+++ b/colares/coloares-pagina.html
@@ -63,12 +63,10 @@
                     <p class="txt-price">Conjunto elisa  <br> R$132,00</p>
                 </div >
                 <div class="peças">
-                    <img src="" alt="">
-                    
-                </div>
-                <div class="peças">
-                    <img src="" alt="">
-                </div>
+                    <img src="imagens/choker cora 45,90.jpg" alt="" class="img-peças" id="cora" onclick="outCora()" ondblclick="overCora()">
+                    <p class="txt-price">Choker cora  <br> R$45,90</p>
+                </div >
+              
 
             </div>
         </section>
