--- a/colares/coloares-pagina.html
+++ b/colares/coloares-pagina.html
@@ -44,7 +44,7 @@
    <main>
         
         <section class="main-main">
-            <h1>Nosso Colares</h1>
+            <h1>Nossos Colares</h1>
             <p>JOIAS PERFEITAS PARA CADA OCASIÃO</p>
             <div class="list-peças">
                 <div class="peças">
