create animation scroll

--- a/home/index.html
+++ b/home/index.html
@@ -49,28 +49,31 @@
         
                 <div class="list-categories">
 
-                    <div id="aneis" class="item-categorie">
+                    <div id="aneis" class="item-categorie"
+                    data-anime="left">
                         <a href="../aneis/aneis-pagina.html" target="_parent">
                             <img src="" alt="">
                             <div class="txt-categories">Aneis</div>
                         </a>
                     </div>
 
-                    <div id="colares" class="item-categorie">
+                    <div id="colares" class="item-categorie"
+                    data-anime="left">
                         <a href="../colares/coloares-pagina.html" target="_parent">
                             <img src="luna joias--home_files/home-colares-categoria.jpg" alt="">
                             <div class="txt-categories"> Colares</div>
                          </a>
                     </div>
 
-                    <div id="Brincos" class="item-categorie">
+                    <div id="Brincos" class="item-categorie" data-anime="left">
                         <a href="../brincos/brincos-pagina.html" target="_parent">
                             <img src="luna joias--home_files/home-brincos-categoria.jpg" alt="">
                            <div class="txt-categories">Brincos</div>
                         </a>
                     </div>
 
-                    <div id="Pulseiras" class="item-categorie">
+                    <div id="Pulseiras" class="item-categorie"
+                    data-anime="left">
                         <a href="../pulseiras/pulseira-pagina.html" target="_parent">
                             <img src="luna joias--home_files/home-pulseiras-categorias.jpg" alt="">
                             <div class="txt-categories">Pulseiras</div>
@@ -96,5 +99,6 @@
         </section>
     </footer>
     <script src="home.js"></script>
+    <script src="animationScroll.js"></script>
 </body>
 </html>
